# vnecommon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/macro_example/: main.cpp
examples/noncopyable_example/: main.cpp
include/vertexnova/common/: common.h  macros.h  noncopyable.h
scripts/: build_linux.sh  build_macos.sh  build_windows.py
